--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,8 @@
 
     <properties>
         <jenkins.version>1.609.3</jenkins.version>
-        <!--<jenkins.version>2.5-SNAPSHOT</jenkins.version>-->
         <java.level>6</java.level>
+        <!--<jenkins.version>2.5-SNAPSHOT</jenkins.version>-->
         <no-test-jar>false</no-test-jar>
         <findbugs.failOnError>false</findbugs.failOnError>
         <concurrency>1C</concurrency>
@@ -67,6 +67,11 @@
     </properties>
 
     <dependencies>
+         <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>ssh-credentials</artifactId>
+            <version>1.13</version>
+         </dependency>
         <dependency>
             <groupId>com.sonymobile.tools.gerrit</groupId>
             <artifactId>gerrit-events</artifactId>
@@ -207,6 +212,11 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sonymobile.tools.gerrit</groupId>
+            <artifactId>gerrit-events</artifactId>
+            <version>2.10.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
@@ -240,6 +250,7 @@
                     <forkCount>${concurrency}</forkCount>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
